Set relative paths, typo fix

--- a/src/assets/app.less
+++ b/src/assets/app.less
@@ -24,7 +24,7 @@ h1 {
 
     &::before {
         content            : '';
-        background         : url(/src/assets/images/bitcoin-btc-logo.svg) no-repeat;
+        background         : url(./images/bitcoin-btc-logo.svg) no-repeat;
         width              : 40px;
         height             : 40px;
         background-size    : 100%;
