--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -34,7 +34,7 @@ h1 {
 }
 h1::before {
   content: '';
-  background: url(/src/assets/images/bitcoin-btc-logo.svg) no-repeat;
+  background: url(./images/bitcoin-btc-logo.svg) no-repeat;
   width: 40px;
   height: 40px;
   background-size: 100%;
