--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -41,10 +41,11 @@ h1::before {
   display: inline-block;
   background-position: center right;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   h1 {
     font-size: 2.1em;
-    margin-top: 0.5em;
+    margin-top: 0.7em;
+    line-height: 1em;
   }
   h1::before {
     width: 28px;
